border to images, fixed line breaks in descs and overflow in gravatar

--- a/app/assets/stylesheets/boards.css.scss
+++ b/app/assets/stylesheets/boards.css.scss
@@ -220,6 +220,7 @@
 	height: 40px;
 	padding-left: 5px;
 	background-color: rgba(176,196,222,0.6); 
+	overflow: auto;
 
 }
 
@@ -230,6 +231,10 @@
 
 	margin-top: 5px;
 	border-radius: 4px;
+
+	border-style: solid;
+	border-color: rgb(100, 100, 100);
+	border-width: 1px;
 
 }
 
